# lumina

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz-release.yml  release-plz.yml
ci/: Dockerfile.node  Dockerfile.validator  docker-compose.yml  run-node.sh
cli/: CHANGELOG.md  Cargo.toml
cli/js/: index.js  webpack.config.js
client/: CHANGELOG.md  Cargo.toml  README.md
client/src/: blob.rs  client.rs  fibre.rs  header.rs  lib.rs  share.rs  state.rs
docs/: release-process.md
examples/android/LuminaDemo/app/src/main/java/co/eiger/luminademo/: Grpc.kt
examples/ios/LuminaDemo/LuminaDemo/: GrpcView.swift
fibre/: CHANGELOG.md  Cargo.toml  PLAN.md
fibre/src/: blob.rs  blob_header.rs  client.rs  config.rs  download.rs  error.rs  grpc_validator_client.rs  host_registry.rs  lib.rs  payment_promise.rs  proto_conv.rs  roundtrip_test.rs  shard_assignment.rs  shard_selection.rs  signature_set.rs  test_utils.rs  upload.rs  validator.rs  validator_client.rs
fibre/src/client/: download.rs  mod.rs  task.rs  upload.rs
fibre/src/domain/: blob.rs  blob_header.rs  config.rs  error.rs  mod.rs  payment_promise.rs
fibre/src/transport/: grpc_validator_client.rs  host_registry.rs  mod.rs  proto_conv.rs  validator_client.rs
fibre/src/validator/: mod.rs  shard_map.rs  signature_set.rs
grpc/: CHANGELOG.md  Cargo.toml
grpc/grpc-macros/: CHANGELOG.md  Cargo.toml
grpc/grpc-macros/src/: lib.rs
grpc/src/: boxed.rs  builder.rs  client.rs  error.rs  grpc.rs  lib.rs  multi_account_tx.rs  signer.rs  test_utils.rs  tx_client_impl.rs  tx_client_v2.rs  utils.rs
grpc/src/grpc/: celestia_tx.rs  fibre.rs
grpc/src/js_client/: grpc_client.rs
grpc/src/tx_client_v2/: mod.rs  node_ctx.rs  node_manager.rs  tests.rs  tx_buffer.rs  tx_internal.rs
grpc/src/uniffi_client/: grpc_client.rs
grpc/tests-js/: tx_client.test.ts
grpc/tests-js/utils/: file_lock.ts
nix/: devshells.nix
node/: CHANGELOG.md  Cargo.toml
node-uniffi/: CHANGELOG.md  Cargo.toml  README.md
node-uniffi/src/types/: event.rs
node-wasm/: CHANGELOG.md  Cargo.toml
node-wasm/js/: README.md  package-lock.json  package.json
node-wasm/src/: client.rs
node-wasm/tests/: client.rs
node/src/: blockstore.rs  daser.rs  events.rs  lib.rs  node.rs  p2p.rs  peer_tracker.rs  store.rs  syncer.rs  test_utils.rs  utils.rs
node/src/node/: builder.rs  subscriptions.rs
node/src/p2p/: shwap.rs  swarm_manager.rs
node/src/p2p/shrex/: client.rs  codec.rs  pool_tracker.rs
node/src/store/: indexed_db_store.rs
node/src/utils/: dns.rs
node/tests/: graceful_stop.rs  identity_persistance.rs  node.rs  shrex.rs  shwap.rs  subscriptions.rs
node/tests/utils/: mod.rs
proto/: CHANGELOG.md  Cargo.toml  build.rs
rpc/: CHANGELOG.md  Cargo.toml  README.md
rpc/src/: blob.rs  blobstream.rs  das.rs  error.rs  failover.rs  fraud.rs  header.rs  lib.rs  share.rs  state.rs  tx_config.rs
rpc/tests/: auth_token.rs  blob.rs  header.rs  share.rs  state.rs
rpc/tests/utils/: client.rs
rsema1d/: CHANGELOG.md  Cargo.toml  README.md
rsema1d/benches/: codec_bench.rs  full_bench.rs  zoda_bench.rs
rsema1d/go/: .gitignore  README.md  go.mod  go.sum
rsema1d/go/cmd/bench/: bench_runner.go
rsema1d/go/cmd/bench_klauspost/: main.go
rsema1d/go/cmd/generate_fuzzy_vectors/: main.go
rsema1d/go/cmd/generate_test_vectors/: main.go
rsema1d/scripts/: compare_rs_impls.sh  run_benchmarks.sh  run_go_compat.sh
rsema1d/src/: error.rs  lib.rs  params.rs
rsema1d/src/codec/: commitment.rs  mod.rs  padding.rs  proof.rs  reconstruct.rs  rows.rs  rs.rs  symbols.rs  verification.rs
rsema1d/src/crypto/: hash.rs  merkle.rs  mod.rs
rsema1d/src/field/: mod.rs
rsema1d/tests/: go_fuzzy_compat.rs
tools/: update-proto-vendor.sh
types/: CHANGELOG.md  Cargo.toml  README.md
types/src/: blob.rs  byzantine.rs  consts.rs  data_availability_header.rs  eds.rs  error.rs  extended_header.rs  fraud_proof.rs  lib.rs  namespace_data.rs  row.rs  row_namespace_data.rs  sample.rs  share.rs  test_utils.rs
types/src/blob/: commitment.rs
types/tests-js/: extended_header.test.ts
utils/: CHANGELOG.md  Cargo.toml
utils/src/: cond_send.rs  failover.rs  lib.rs  test_utils.rs
xtask/: Cargo.toml  release.md  spec.md
xtask/src/: cli.rs  main.rs  orchestrator.rs  output.rs
xtask/src/adapters/: git2_repo.rs  git_refs.rs  github.rs  github_output.rs  github_pr.rs  metadata.rs  mod.rs  release_plz.rs  release_plz_tests.rs
xtask/src/app/: checks.rs
xtask/src/application/: gha.rs  gha_mock.rs  gha_ops.rs  mod.rs  pipeline.rs  pipeline_mock.rs  pipeline_ops.rs  prepare.rs  prepare_tests.rs  publish.rs  publish_tests.rs  simulation.rs  submit.rs  submit_tests.rs  tests.rs
xtask/src/domain/: context.rs  mod.rs  model.rs  ports.rs  report.rs  types.rs  validation.rs  versioning.rs  workspace.rs
xtask/src/engine/: mod.rs  release_plz.rs
xtask/src/infra/: git2_ops.rs  git_refs.rs  github.rs  metadata.rs  mod.rs
xtask/src/interface/: cli.rs  json_output.rs  main.rs  mod.rs
