[package]
license = "Apache-2.0"
description = "Reed-Solomon erasure coding with Merkle commitments and Random Linear Combinations"
name = "rsema1d"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsema1d"
path = "src/lib.rs"

[dependencies]
reed-solomon-simd = "3.1.0"
sha2 = { version = "0.10", features = ["asm"] }
thiserror = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen-test = "0.3"
