[package]
license = "Apache-2.0"
description = "Reed-Solomon erasure coding with Merkle commitments and Random Linear Combinations"
name = "rsema1d"
version.workspace = true
edition = "2021"

[lib]
name = "rsema1d"
path = "src/lib.rs"

[dependencies]
reed-solomon-simd = { branch = "mcrakhman/avx", git = "https://github.com/mcrakhman/reed-solomon-simd" }
sha2 = { version = "0.10.8", features = ["asm"] }
thiserror = "1.0.69"
rayon = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex.workspace = true

[dev-dependencies]
rand.workspace = true
rand_chacha = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec_bench"
harness = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen-test = "0.3"
