[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.23.1"
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
release_plz_core = { git = "https://github.com/mcrakhman/release-plz", branch = "mcrakhman/release-plz-rc", commit = "315f123f2da78f02fa95e9e726b25c5fd304cbe0" }
git2 = "0.20.2"
time = { workspace = true, features = ["formatting", "macros", "std"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
