[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cargo_metadata = "0.23.1"
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
release_plz_core = { git = "https://github.com/mcrakhman/release-plz", branch = "mcrakhman/release-plz-rc" }
git2 = "0.20.2"
time = { workspace = true, features = ["formatting", "macros", "std"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
